BUGFIX: Log positioning and filtering.
Enhanced the log icons, which were cropped.
Added Coq and Github icons in toolbar.

--- a/ui-css/coq-base.css
+++ b/ui-css/coq-base.css
@@ -116,7 +116,8 @@ a, a:link, a:visited, a:active {
 }
 
 .flex-panel > .caption select {
-  font-size: 6px;
+  font-size: 8px;
+  margin-left: 1em;
 }
 
 .flex-panel > .content {
@@ -180,6 +181,20 @@ a, a:link, a:visited, a:active {
   white-space: nowrap;
   display: inline-block;
   vertical-align: top;
+  padding-left: .5em;
+}
+
+#toolbar .exits.right {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+}
+
+#at-github {
+  height: 24px;
+  vertical-align: middle;
+  padding-bottom: 5px;
+  box-sizing: content-box;
 }
 
 #buttons {
@@ -187,22 +202,14 @@ a, a:link, a:visited, a:active {
   opacity: 0;
   text-align: left;
   padding-left: 2em;
-  width: 100%;
   transition: opacity 500ms ease;
   vertical-align: middle;
-  width: 100%;
 }
 
 #buttons img {
   margin: 0 2px;
   margin-top: 5px;
   cursor: pointer;
-}
-
-#query-panel > div {
-  line-height: 1.25em;
-  padding-left: 18px;
-  white-space: pre;
 }
 
 /* overloads */
